--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div>
                 <article>
                     <header>
-                        <h2>Ten amusing facts about dogs</h2>
-                        <h3>Read time: 5 minutes</h3>
+                        <h2>All the amusing facts about dogs</h2>
+                        <h3>Read time: 100 minutes</h3>
                     </header>
                     <main>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptatem?</p>
